# blockchain-core

./: .gitignore  CMakeLists.txt  README.md  main.cpp
blockhain/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BlockchainCore.sln  BlockchainCore.vcxproj  BlockchainCore.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
blockhain/cblock/: CBlock.cpp  CBlock.h
blockhain/cchain/: CChain.cpp  CChain.h
blockhain/cnetwork/: CNetwork.cpp  CNetwork.h
blockhain/ctransaction/: CTransaction.cpp  CTransaction.h
include/: Amount.h  Types.h
